# CapstoneProject

./: .gitignore  devcheck.json  readme.md
.devcontainer/: DockerFile  devcontainer.json
scripts/: CMakeLists.txt  config.toml  setup.bat
src/: main.cpp  main.py
src/car/: main.py
src/car/functions/: init.cpp
src/car/headers/: Init.hpp
src/database/: main.py
src/parking/: main.py
src/pii/: main.py
test/: checkDev.py
